<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:id="@+id/foto"
                android:layout_width="200dp"
                android:layout_height="165dp"
                android:background="@drawable/sttnfs"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"/>
           <TextView
               android:id="@+id/id_nama"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/nama"/>
            <TextView
                android:id="@+id/id_ttl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ttl"/>
            <TextView
                android:id="@+id/id_prodi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prodi"/>
            <TextView
                android:id="@+id/id_nim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"/>
            <TextView
                android:id="@+id/id_kampus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kampus"/>

        </LinearLayout>
    </RelativeLayout>
